--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,42 @@
 <div id="home">
-  <p>LA TUA PALESTRA, OVUNQUE TU VOGLIA</p>
+  <p class="text1">LA TUA PALESTRA, OVUNQUE TU VOGLIA</p>
   <img class="image1" src="../../assets/immagini/palestra1.jpg" />
 
-  <p>
-    SEI IN VIAGGIO E NON VUOI RINUNCIARE ALLA TUA FORMA FISICA? ALLORA CERCA LA
-    PALESTRA AFFILIATA PIU’ VICINA A TE ED USUFRUISCI DEI LORO CORSI. IL TUTTO
-    CON UN SEMPLCE ABBONAMENTO
+  <p class="text2">
+    SEI IN VIAGGIO E NON VUOI RINUNCIARE ALLA TUA FORMA FISICA? <br />
+    ALLORA CERCA LA PALESTRA AFFILIATA PIU’ VICINA A TE ED USUFRUISCI DEI LORO
+    CORSI. <br />
+    IL TUTTO CON UN SEMPLICE ABBONAMENTO
   </p>
 
+  <img class="image2" src="../../assets/immagini/palestra2.jpg" />
+
   <button>scopri la nostra offerta</button>
+
+  <footer>
+    <ul>
+      <h4>LINK UTILI</h4>
+      <p>Assistenza</p>
+      <p>Termini legali</p>
+      <p>App per cellulare</p>
+      <p>Diritti del consumatore</p>
+    </ul>
+    <ul>
+      <h4>AZIENDA</h4>
+      <p>Chi siamo</p>
+      <p>Il nostro team</p>
+      <p>Sede legale</p>
+    </ul>
+    <ul>
+      <h4>PER LE PALESTRE</h4>
+      <p>Registrazione</p>
+      <p>FAQ</p>
+    </ul>
+    <ul>
+      <h4>SEGUICI</h4>
+      <p>Facebook</p>
+      <p>Instagram</p>
+      <p>Linkedin</p>
+    </ul>
+  </footer>
 </div>
