--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,55 @@
 <div id="home">
   <p class="text1">LA TUA PALESTRA, OVUNQUE TU VOGLIA</p>
-  <img class="image1" src="../../assets/immagini/palestra1.jpg" />
+
+  <div
+    id="carouselExampleControls"
+    class="carousel slide"
+    data-bs-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="../../assets/immagini/palestra1.jpg"
+          class="d-block w-100"
+          alt="pal1"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="../../assets/immagini/palestra2.jpg"
+          class="d-block w-100"
+          alt="pal2"
+        />
+      </div>
+      <div class="carousel-item">
+        <img
+          src="../../assets/immagini/palestra3.jpg"
+          class="d-block w-100"
+          alt="pal3"
+        />
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleControls"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleControls"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!--<img class="image1" src="../../assets/immagini/palestra1.jpg" />-->
 
   <p class="text2">
     SEI IN VIAGGIO E NON VUOI RINUNCIARE ALLA TUA FORMA FISICA? <br />
@@ -11,7 +60,7 @@
 
   <img class="image2" src="../../assets/immagini/palestra2.jpg" />
 
-  <button>scopri la nostra offerta</button>
+  <button class="abbonamento">scopri la nostra offerta</button>
 
   <footer>
     <ul>
