--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 html {
-  background-color: rgba(27, 27, 27, 1);
+  background-color: #1b1b1b;
 }
