--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .navbar {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: rgba(238, 180, 30, 1);
-
+  background-color: #1b1b1b;
   width: 100%;
   height: 22vh;
   text-transform: uppercase;
