--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,6 +25,12 @@
   font-size: 13px;
   text-transform: uppercase;
   margin-top: 20px;
+  border: transparent;
+}
+
+.abbonamento:hover {
+  background-color: black;
+  color: rgba(238, 180, 30, 1);
 }
 
 .text2 {
@@ -41,6 +47,8 @@
 
 .carousel-item {
   border: 3px solid #eeb41e;
+
+  overflow: hidden;
 }
 
 .image1 {
