--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,10 +11,12 @@
   align-items: center;
 }
 
-p {
+a {
   letter-spacing: 10px;
   padding-right: 1%;
   margin: 15px;
+  text-decoration: none;
+  color: rgba(238, 180, 30, 1);
 }
 
 .LogoPanda {
