--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="navbar">
   <img class="LogoPanda" src="../../assets/immagini/LogoPanda.png" />
 
-  <p>Palestre</p>
-  <p>Corsi</p>
-  <p>Abbonamenti</p>
-  <p>Login</p>
+  <a>Palestre</a>
+  <a>Corsi</a>
+  <a routerLink="/abbonamenti">Abbonamenti</a>
+  <a>Login</a>
 </div>
