Aggiunto routing e finta api palestre

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="navbar">
   <img class="LogoPanda" src="../../assets/immagini/LogoPanda.png" />
 
-  <a>Palestre</a>
+  <a routerLink="/palestre">Palestre</a>
   <a>Corsi</a>
   <a routerLink="/abbonamenti">Abbonamenti</a>
-  <a>Login</a>
+  <a routerLink="/login">Login</a>
 </div>
