--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,10 @@
-<p>login works!</p>
+<div id="login-form">
+    <div class="form">
+<p>Username</p>
+<input type="text" placeholder="insert your email">
+<p>Password</p>
+<input type="text" placeholder="insert your password">
+<button>Login</button>
+<button>Registrati</button>
+</div>
+</div>
