--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,11 @@
 <div class="navbar">
-  <img class="LogoPanda" src="../../assets/immagini/LogoPanda.png" />
+  
+  <a routerLink="">
+  <img
+    class="LogoPanda"
+    src="../../assets/immagini/LogoPanda.png"
+    />
+  </a>
 
   <a routerLink="/palestre">Palestre</a>
   <a>Corsi</a>
